syntax = "proto3";

package smartwinFutures;

service SmartwinFutures {
  rpc GetMarketDepthStream(Empty) returns (stream MarketDepth) {}
  rpc GetBarStream(Empty) returns (stream Bar) {}
  rpc GetTickerStream(Empty) returns (stream Ticker) {}
  rpc GetDayBarStream(Empty) returns (stream DayBar) {}

  rpc SubscribeMarketData(Subscription) returns (Subscription) {}
  rpc UnsubscribeMarketData(Subscription) returns (Subscription) {}

  rpc GetLastMarketDepths(Subscriptions) returns (LastMarketDepthsResponse) {}
  rpc GetLastBars(Subscriptions) returns (LastBarsResponse) {}
  rpc GetLastTickers(Subscriptions) returns (LastTickersResponse) {}
  rpc GetLastDayBars(Subscriptions) returns (LastDayBarsResponse) {}

  rpc GetInstruments(GetInstruments) returns (Instruments) {}
}

message Empty {
}

message GetInstruments {
  repeated string symbols = 1;
}

message Instruments {
  repeated Instrument instruments = 1;
}

message Instrument {
  string instrumentid = 1;
  string combinationtype = 2;
  string createdate = 3;
  int32 deliverymonth = 4;
  int32 deliveryyear = 5;
  string enddelivdate = 6;
  string exchangeid = 7;
  string exchangeinstid = 8;
  string expiredate = 9;
  string instlifephase = 10;
  string instrumentname = 11;
  int32 istrading = 12;
  double longmarginratio = 13;
  int32 maxlimitordervolume = 14;
  string maxmarginsidealgorithm = 15;
  int32 maxmarketordervolume = 16;
  int32 minlimitordervolume = 17;
  int32 minmarketordervolume = 18;
  string opendate = 19;
  string optionstype = 20;
  string positiondatetype = 21;
  string positiontype = 22;
  double pricetick = 23;
  string productclass = 24;
  string productid = 25;
  int32 requestid = 26;
  double shortmarginratio = 27;
  string startdelivdate = 28;
  double strikeprice = 29;
  string underlyinginstrid = 30;
  int32 underlyingmultiple = 31;
  string updatedate = 32;
  int32 volumemultiple = 33;
  double openinterest = 34;
  double preopeninterest = 35;
  int32 prerank = 36;
  int32 rank = 37;
  string update_rank_date = 38;
}

message Subscription {
  string symbol = 1;
  string resolution = 2;
  string dataType = 3;
}

message Subscriptions {
  repeated Subscription subscriptions = 1;
}

message LastMarketDepthsResponse {
  repeated MarketDepth marketDepths = 1;
}

message LastBarsResponse {
  repeated Bar bars = 1;
}

message LastTickersResponse {
  repeated Ticker tickers = 1;
}

message LastDayBarsResponse {
  repeated DayBar dayBars = 1;
}

message MarketDepth {
  string dataType = 1;
  string symbol = 2; //
  string resolution = 3; //
  string tradingDay = 4;
  string instrumentID = 5;
  string exchangeID = 6;
  string exchangeInstID = 7;
  double lastPrice = 8;
  double preSettlementPrice = 9;
  double preClosePrice = 10;
  double preOpenInterest = 11;
  double openPrice = 12;
  double highestPrice = 13;
  double lowestPrice = 14;
  int32 volume = 15;
  double turnover = 16;
  double openInterest = 17;
  double closePrice = 18;
  double settlementPrice = 19;
  double upperLimitPrice = 20;
  double lowerLimitPrice = 21;
  string updateTime = 22;
  int32 updateMillisec = 23;
  double bidPrice1 = 24;
  int32 bidVolume1 = 25;
  double askPrice1 = 26;
  int32 askVolume1 = 27;
  double averagePrice = 28;
  string actionDay = 29;
}

message Bar {
  string dataType = 1;
  string symbol = 2; //
  string resolution = 3; //
  string timestamp = 4; //
  double open = 5; //
  double high = 6; //
  double low = 7; //
  double close = 8; //
  int32 volume = 9; //
  double turnover = 10; //
  double openInterest = 11; //
}

message Ticker {
  string dataType = 1;
  string symbol = 2; //
  string resolution = 3; //
  string timestamp = 4; // ACTIONDAY+HH24MISS+.SSS = 1
  double price = 5; // 本次结算价
  int32	volume = 6; // 成交量
  double turnover = 7; // 成交额
  double openInterest = 8; // 持仓量 未平仓合约
  double totalVolume = 9; // 成交量
  double totalTurnover = 10; // 成交额
  double bidPrice1 = 11; // 买一价
  double askPrice1 = 12; // 卖一价
  int32	bidVolume1 = 13; // 买一量
  int32	askVolume1 = 14; // 卖一量
  string date = 15;
}

message DayBar {
  string dataType = 1;
  string symbol = 2; //
  string resolution = 3; //
  string tradingday = 4;
  string timestamp = 5; // TradeDay+hh24mi00
  double high = 6; // 最高价
  double low = 7; // 最低价
  double open = 8; // 开盘价
  double close = 9; // 收盘价
  double average = 10; // 日均价
  int32 volume = 11; // 成交量
  double turnover = 12; // 成交额
  double settlement = 13; // 结算价
  double openinterest = 14; // 持仓量 未平仓合约
  double presettlement = 15; // 上次结算价
  double preclose = 16; // 昨收盘
  double preoopeninterest = 17; // 昨持仓量
  double price = 18; // 当前价
  double upperlimit = 19; // 涨停价
  double lowerlimit = 20; // 跌停价
}
